importing fixes to about page, fixing link to google font, importing changed images, adding missing margin classes in css

--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -933,3 +933,10 @@ footer .sitemap-ul li:first-child {
   outline: none;
 }
 @import 'google';
+
+.marginright {
+  margin-right: 15px;
+}
+.marginleft {
+  margin-left: 15px;
+}
